parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    new_line

Grammar

Rule 0     S' -> program
Rule 1     program -> function_impl
Rule 2     program -> program function_impl
Rule 3     return_statement -> return return_value
Rule 4     assert_statement -> assert condition
Rule 5     return_value -> value
Rule 6     return_value -> <empty>
Rule 7     function_impl_parameters -> <empty>
Rule 8     function_impl_parameters -> data_type new_function_parameter_name
Rule 9     function_impl_parameters -> function_impl_parameters comma data_type new_function_parameter_name
Rule 10    function_prototype_start -> function_ret_type function_name
Rule 11    function_prototype -> function_prototype_start open_parenthesise function_impl_parameters close_parenthesise
Rule 12    function_call_parameters -> <empty>
Rule 13    function_call_parameters -> value
Rule 14    function_call_parameters -> function_call_parameters comma value
Rule 15    function_call -> function_name open_parenthesise function_call_parameters close_parenthesise
Rule 16    function_impl -> function_prototype open_curly_brackets code_block close_curly_brackets
Rule 17    function_ret_type -> data_type
Rule 18    function_ret_type -> void_keyword
Rule 19    code_block -> statement
Rule 20    code_block -> code_block statement
Rule 21    code_block -> <empty>
Rule 22    statement -> basic_block_command semicolon
Rule 23    statement -> block
Rule 24    basic_block_command -> def_var
Rule 25    basic_block_command -> def_array
Rule 26    basic_block_command -> int_assignment
Rule 27    basic_block_command -> print_statement
Rule 28    basic_block_command -> read_line_statement
Rule 29    basic_block_command -> exit_statement
Rule 30    basic_block_command -> function_call
Rule 31    basic_block_command -> return_statement
Rule 32    basic_block_command -> assert_statement
Rule 33    block -> if_statement
Rule 34    block -> while_statement
Rule 35    scope_start -> open_curly_brackets
Rule 36    scope_end -> close_curly_brackets
Rule 37    scope -> scope_start code_block scope_end
Rule 38    condition -> simple_condition
Rule 39    condition -> complex_condition
Rule 40    simple_condition -> les_condition
Rule 41    simple_condition -> grater_condition
Rule 42    simple_condition -> equality_condition
Rule 43    simple_condition -> not_equals_condition
Rule 44    simple_condition -> condition_in_parenthesise
Rule 45    complex_condition -> and_condition
Rule 46    complex_condition -> or_condition
Rule 47    or_condition -> condition or_operator simple_condition
Rule 48    and_condition -> condition and_operator simple_condition
Rule 49    condition_in_parenthesise -> open_parenthesise condition close_parenthesise
Rule 50    les_condition -> expression less_operator expression
Rule 51    grater_condition -> expression greater_operator expression
Rule 52    equality_condition -> expression equality_operator expression
Rule 53    not_equals_condition -> expression not_equals_operator expression
Rule 54    if_statement -> if_keyword open_parenthesise condition close_parenthesise scope else_statement
Rule 55    if_statement -> if_keyword open_parenthesise condition close_parenthesise scope
Rule 56    else_statement -> else_keyword scope
Rule 57    while_statement -> while_keyword open_parenthesise condition close_parenthesise scope
Rule 58    data_type -> int_32_keyword
Rule 59    data_type -> char_keyword
Rule 60    def_var -> data_type new_var_name
Rule 61    def_var -> data_type new_var_name equals_operator value
Rule 62    def_array -> data_type new_var_name open_brackets simple_int_value close_brackets
Rule 63    array_cell -> array_name open_brackets value close_brackets
Rule 64    int_assignment -> dest_var equals_operator value
Rule 65    simple_int_value -> int_32_value
Rule 66    simple_int_value -> char_value
Rule 67    int_value -> int_expression
Rule 68    dest_var -> var_name
Rule 69    dest_var -> array_cell
Rule 70    value -> int_value
Rule 71    function_call_value -> function_call
Rule 72    int_expression -> simple_int_value
Rule 73    int_expression -> function_call_value
Rule 74    int_expression -> array_cell
Rule 75    int_expression -> int_expression_in_parenthesise
Rule 76    int_expression -> var_name
Rule 77    int_expression -> add_expression
Rule 78    int_expression -> sub_expression
Rule 79    int_expression -> mul_expression
Rule 80    int_expression -> dev_expression
Rule 81    int_expression -> dev_rest_expression
Rule 82    expression -> int_expression
Rule 83    int_expression_in_parenthesise -> open_parenthesise int_expression close_parenthesise
Rule 84    add_expression -> expression add_operator expression
Rule 85    sub_expression -> expression sub_operator expression
Rule 86    mul_expression -> expression asterisk expression
Rule 87    dev_expression -> expression dev_operator expression
Rule 88    dev_rest_expression -> expression dev_rest_operator expression
Rule 89    var_name -> name
Rule 90    array_name -> name
Rule 91    new_function_parameter_name -> name
Rule 92    new_var_name -> name
Rule 93    function_name -> name
Rule 94    exit_statement -> exit int_expression
Rule 95    read_line_statement -> read_line array_name comma simple_int_value
Rule 96    print_statement -> print_value_statement
Rule 97    print_statement -> print_string_statement
Rule 98    print_statement -> print_array_statement
Rule 99    print_array_statement -> print_array array_name
Rule 100   print_value_statement -> print value
Rule 101   print_string_statement -> print string

Terminals, with rules where they appear

add_operator         : 84
and_operator         : 48
assert               : 4
asterisk             : 86
char_keyword         : 59
char_value           : 66
close_brackets       : 62 63
close_curly_brackets : 16 36
close_parenthesise   : 11 15 49 54 55 57 83
comma                : 9 14 95
dev_operator         : 87
dev_rest_operator    : 88
else_keyword         : 56
equality_operator    : 52
equals_operator      : 61 64
error                : 
exit                 : 94
greater_operator     : 51
if_keyword           : 54 55
int_32_keyword       : 58
int_32_value         : 65
less_operator        : 50
name                 : 89 90 91 92 93
new_line             : 
not_equals_operator  : 53
open_brackets        : 62 63
open_curly_brackets  : 16 35
open_parenthesise    : 11 15 49 54 55 57 83
or_operator          : 47
print                : 100 101
print_array          : 99
read_line            : 95
return               : 3
semicolon            : 22
string               : 101
sub_operator         : 85
void_keyword         : 18
while_keyword        : 57

Nonterminals, with rules where they appear

add_expression       : 77
and_condition        : 45
array_cell           : 69 74
array_name           : 63 95 99
assert_statement     : 32
basic_block_command  : 22
block                : 23
code_block           : 16 20 37
complex_condition    : 39
condition            : 4 47 48 49 54 55 57
condition_in_parenthesise : 44
data_type            : 8 9 17 60 61 62
def_array            : 25
def_var              : 24
dest_var             : 64
dev_expression       : 80
dev_rest_expression  : 81
else_statement       : 54
equality_condition   : 42
exit_statement       : 29
expression           : 50 50 51 51 52 52 53 53 84 84 85 85 86 86 87 87 88 88
function_call        : 30 71
function_call_parameters : 14 15
function_call_value  : 73
function_impl        : 1 2
function_impl_parameters : 9 11
function_name        : 10 15
function_prototype   : 16
function_prototype_start : 11
function_ret_type    : 10
grater_condition     : 41
if_statement         : 33
int_assignment       : 26
int_expression       : 67 82 83 94
int_expression_in_parenthesise : 75
int_value            : 70
les_condition        : 40
mul_expression       : 79
new_function_parameter_name : 8 9
new_var_name         : 60 61 62
not_equals_condition : 43
or_condition         : 46
print_array_statement : 98
print_statement      : 27
print_string_statement : 97
print_value_statement : 96
program              : 2 0
read_line_statement  : 28
return_statement     : 31
return_value         : 3
scope                : 54 55 56 57
scope_end            : 37
scope_start          : 37
simple_condition     : 38 47 48
simple_int_value     : 62 72 95
statement            : 19 20
sub_expression       : 78
value                : 5 13 14 61 63 64 100
var_name             : 68 76
while_statement      : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_impl
    (2) program -> . program function_impl
    (16) function_impl -> . function_prototype open_curly_brackets code_block close_curly_brackets
    (11) function_prototype -> . function_prototype_start open_parenthesise function_impl_parameters close_parenthesise
    (10) function_prototype_start -> . function_ret_type function_name
    (17) function_ret_type -> . data_type
    (18) function_ret_type -> . void_keyword
    (58) data_type -> . int_32_keyword
    (59) data_type -> . char_keyword

    void_keyword    shift and go to state 7
    int_32_keyword  shift and go to state 8
    char_keyword    shift and go to state 9

    program                        shift and go to state 1
    function_impl                  shift and go to state 2
    function_prototype             shift and go to state 3
    function_prototype_start       shift and go to state 4
    function_ret_type              shift and go to state 5
    data_type                      shift and go to state 6

state 1

    (0) S' -> program .
    (2) program -> program . function_impl
    (16) function_impl -> . function_prototype open_curly_brackets code_block close_curly_brackets
    (11) function_prototype -> . function_prototype_start open_parenthesise function_impl_parameters close_parenthesise
    (10) function_prototype_start -> . function_ret_type function_name
    (17) function_ret_type -> . data_type
    (18) function_ret_type -> . void_keyword
    (58) data_type -> . int_32_keyword
    (59) data_type -> . char_keyword

    void_keyword    shift and go to state 7
    int_32_keyword  shift and go to state 8
    char_keyword    shift and go to state 9

    function_impl                  shift and go to state 10
    function_prototype             shift and go to state 3
    function_prototype_start       shift and go to state 4
    function_ret_type              shift and go to state 5
    data_type                      shift and go to state 6

state 2

    (1) program -> function_impl .

    void_keyword    reduce using rule 1 (program -> function_impl .)
    int_32_keyword  reduce using rule 1 (program -> function_impl .)
    char_keyword    reduce using rule 1 (program -> function_impl .)
    $end            reduce using rule 1 (program -> function_impl .)


state 3

    (16) function_impl -> function_prototype . open_curly_brackets code_block close_curly_brackets

    open_curly_brackets shift and go to state 11


state 4

    (11) function_prototype -> function_prototype_start . open_parenthesise function_impl_parameters close_parenthesise

    open_parenthesise shift and go to state 12


state 5

    (10) function_prototype_start -> function_ret_type . function_name
    (93) function_name -> . name

    name            shift and go to state 14

    function_name                  shift and go to state 13

state 6

    (17) function_ret_type -> data_type .

    name            reduce using rule 17 (function_ret_type -> data_type .)


state 7

    (18) function_ret_type -> void_keyword .

    name            reduce using rule 18 (function_ret_type -> void_keyword .)


state 8

    (58) data_type -> int_32_keyword .

    name            reduce using rule 58 (data_type -> int_32_keyword .)


state 9

    (59) data_type -> char_keyword .

    name            reduce using rule 59 (data_type -> char_keyword .)


state 10

    (2) program -> program function_impl .

    void_keyword    reduce using rule 2 (program -> program function_impl .)
    int_32_keyword  reduce using rule 2 (program -> program function_impl .)
    char_keyword    reduce using rule 2 (program -> program function_impl .)
    $end            reduce using rule 2 (program -> program function_impl .)


state 11

    (16) function_impl -> function_prototype open_curly_brackets . code_block close_curly_brackets
    (19) code_block -> . statement
    (20) code_block -> . code_block statement
    (21) code_block -> .
    (22) statement -> . basic_block_command semicolon
    (23) statement -> . block
    (24) basic_block_command -> . def_var
    (25) basic_block_command -> . def_array
    (26) basic_block_command -> . int_assignment
    (27) basic_block_command -> . print_statement
    (28) basic_block_command -> . read_line_statement
    (29) basic_block_command -> . exit_statement
    (30) basic_block_command -> . function_call
    (31) basic_block_command -> . return_statement
    (32) basic_block_command -> . assert_statement
    (33) block -> . if_statement
    (34) block -> . while_statement
    (60) def_var -> . data_type new_var_name
    (61) def_var -> . data_type new_var_name equals_operator value
    (62) def_array -> . data_type new_var_name open_brackets simple_int_value close_brackets
    (64) int_assignment -> . dest_var equals_operator value
    (96) print_statement -> . print_value_statement
    (97) print_statement -> . print_string_statement
    (98) print_statement -> . print_array_statement
    (95) read_line_statement -> . read_line array_name comma simple_int_value
    (94) exit_statement -> . exit int_expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (3) return_statement -> . return return_value
    (4) assert_statement -> . assert condition
    (54) if_statement -> . if_keyword open_parenthesise condition close_parenthesise scope else_statement
    (55) if_statement -> . if_keyword open_parenthesise condition close_parenthesise scope
    (57) while_statement -> . while_keyword open_parenthesise condition close_parenthesise scope
    (58) data_type -> . int_32_keyword
    (59) data_type -> . char_keyword
    (68) dest_var -> . var_name
    (69) dest_var -> . array_cell
    (100) print_value_statement -> . print value
    (101) print_string_statement -> . print string
    (99) print_array_statement -> . print_array array_name
    (93) function_name -> . name
    (89) var_name -> . name
    (63) array_cell -> . array_name open_brackets value close_brackets
    (90) array_name -> . name

  ! shift/reduce conflict for read_line resolved as shift
  ! shift/reduce conflict for exit resolved as shift
  ! shift/reduce conflict for return resolved as shift
  ! shift/reduce conflict for assert resolved as shift
  ! shift/reduce conflict for if_keyword resolved as shift
  ! shift/reduce conflict for while_keyword resolved as shift
  ! shift/reduce conflict for int_32_keyword resolved as shift
  ! shift/reduce conflict for char_keyword resolved as shift
  ! shift/reduce conflict for print resolved as shift
  ! shift/reduce conflict for print_array resolved as shift
  ! shift/reduce conflict for name resolved as shift
    close_curly_brackets reduce using rule 21 (code_block -> .)
    read_line       shift and go to state 35
    exit            shift and go to state 37
    return          shift and go to state 39
    assert          shift and go to state 40
    if_keyword      shift and go to state 41
    while_keyword   shift and go to state 42
    int_32_keyword  shift and go to state 8
    char_keyword    shift and go to state 9
    print           shift and go to state 45
    print_array     shift and go to state 46
    name            shift and go to state 47

  ! read_line       [ reduce using rule 21 (code_block -> .) ]
  ! exit            [ reduce using rule 21 (code_block -> .) ]
  ! return          [ reduce using rule 21 (code_block -> .) ]
  ! assert          [ reduce using rule 21 (code_block -> .) ]
  ! if_keyword      [ reduce using rule 21 (code_block -> .) ]
  ! while_keyword   [ reduce using rule 21 (code_block -> .) ]
  ! int_32_keyword  [ reduce using rule 21 (code_block -> .) ]
  ! char_keyword    [ reduce using rule 21 (code_block -> .) ]
  ! print           [ reduce using rule 21 (code_block -> .) ]
  ! print_array     [ reduce using rule 21 (code_block -> .) ]
  ! name            [ reduce using rule 21 (code_block -> .) ]

    code_block                     shift and go to state 15
    statement                      shift and go to state 16
    basic_block_command            shift and go to state 17
    block                          shift and go to state 18
    def_var                        shift and go to state 19
    def_array                      shift and go to state 20
    int_assignment                 shift and go to state 21
    print_statement                shift and go to state 22
    read_line_statement            shift and go to state 23
    exit_statement                 shift and go to state 24
    function_call                  shift and go to state 25
    return_statement               shift and go to state 26
    assert_statement               shift and go to state 27
    if_statement                   shift and go to state 28
    while_statement                shift and go to state 29
    data_type                      shift and go to state 30
    dest_var                       shift and go to state 31
    print_value_statement          shift and go to state 32
    print_string_statement         shift and go to state 33
    print_array_statement          shift and go to state 34
    array_name                     shift and go to state 36
    function_name                  shift and go to state 38
    var_name                       shift and go to state 43
    array_cell                     shift and go to state 44

state 12

    (11) function_prototype -> function_prototype_start open_parenthesise . function_impl_parameters close_parenthesise
    (7) function_impl_parameters -> .
    (8) function_impl_parameters -> . data_type new_function_parameter_name
    (9) function_impl_parameters -> . function_impl_parameters comma data_type new_function_parameter_name
    (58) data_type -> . int_32_keyword
    (59) data_type -> . char_keyword

    close_parenthesise reduce using rule 7 (function_impl_parameters -> .)
    comma           reduce using rule 7 (function_impl_parameters -> .)
    int_32_keyword  shift and go to state 8
    char_keyword    shift and go to state 9

    function_impl_parameters       shift and go to state 48
    data_type                      shift and go to state 49

state 13

    (10) function_prototype_start -> function_ret_type function_name .

    open_parenthesise reduce using rule 10 (function_prototype_start -> function_ret_type function_name .)


state 14

    (93) function_name -> name .

    open_parenthesise reduce using rule 93 (function_name -> name .)


state 15

    (16) function_impl -> function_prototype open_curly_brackets code_block . close_curly_brackets
    (20) code_block -> code_block . statement
    (22) statement -> . basic_block_command semicolon
    (23) statement -> . block
    (24) basic_block_command -> . def_var
    (25) basic_block_command -> . def_array
    (26) basic_block_command -> . int_assignment
    (27) basic_block_command -> . print_statement
    (28) basic_block_command -> . read_line_statement
    (29) basic_block_command -> . exit_statement
    (30) basic_block_command -> . function_call
    (31) basic_block_command -> . return_statement
    (32) basic_block_command -> . assert_statement
    (33) block -> . if_statement
    (34) block -> . while_statement
    (60) def_var -> . data_type new_var_name
    (61) def_var -> . data_type new_var_name equals_operator value
    (62) def_array -> . data_type new_var_name open_brackets simple_int_value close_brackets
    (64) int_assignment -> . dest_var equals_operator value
    (96) print_statement -> . print_value_statement
    (97) print_statement -> . print_string_statement
    (98) print_statement -> . print_array_statement
    (95) read_line_statement -> . read_line array_name comma simple_int_value
    (94) exit_statement -> . exit int_expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (3) return_statement -> . return return_value
    (4) assert_statement -> . assert condition
    (54) if_statement -> . if_keyword open_parenthesise condition close_parenthesise scope else_statement
    (55) if_statement -> . if_keyword open_parenthesise condition close_parenthesise scope
    (57) while_statement -> . while_keyword open_parenthesise condition close_parenthesise scope
    (58) data_type -> . int_32_keyword
    (59) data_type -> . char_keyword
    (68) dest_var -> . var_name
    (69) dest_var -> . array_cell
    (100) print_value_statement -> . print value
    (101) print_string_statement -> . print string
    (99) print_array_statement -> . print_array array_name
    (93) function_name -> . name
    (89) var_name -> . name
    (63) array_cell -> . array_name open_brackets value close_brackets
    (90) array_name -> . name

    close_curly_brackets shift and go to state 50
    read_line       shift and go to state 35
    exit            shift and go to state 37
    return          shift and go to state 39
    assert          shift and go to state 40
    if_keyword      shift and go to state 41
    while_keyword   shift and go to state 42
    int_32_keyword  shift and go to state 8
    char_keyword    shift and go to state 9
    print           shift and go to state 45
    print_array     shift and go to state 46
    name            shift and go to state 47

    statement                      shift and go to state 51
    basic_block_command            shift and go to state 17
    block                          shift and go to state 18
    def_var                        shift and go to state 19
    def_array                      shift and go to state 20
    int_assignment                 shift and go to state 21
    print_statement                shift and go to state 22
    read_line_statement            shift and go to state 23
    exit_statement                 shift and go to state 24
    function_call                  shift and go to state 25
    return_statement               shift and go to state 26
    assert_statement               shift and go to state 27
    if_statement                   shift and go to state 28
    while_statement                shift and go to state 29
    data_type                      shift and go to state 30
    dest_var                       shift and go to state 31
    print_value_statement          shift and go to state 32
    print_string_statement         shift and go to state 33
    print_array_statement          shift and go to state 34
    array_name                     shift and go to state 36
    function_name                  shift and go to state 38
    var_name                       shift and go to state 43
    array_cell                     shift and go to state 44

state 16

    (19) code_block -> statement .

    close_curly_brackets reduce using rule 19 (code_block -> statement .)
    read_line       reduce using rule 19 (code_block -> statement .)
    exit            reduce using rule 19 (code_block -> statement .)
    return          reduce using rule 19 (code_block -> statement .)
    assert          reduce using rule 19 (code_block -> statement .)
    if_keyword      reduce using rule 19 (code_block -> statement .)
    while_keyword   reduce using rule 19 (code_block -> statement .)
    int_32_keyword  reduce using rule 19 (code_block -> statement .)
    char_keyword    reduce using rule 19 (code_block -> statement .)
    print           reduce using rule 19 (code_block -> statement .)
    print_array     reduce using rule 19 (code_block -> statement .)
    name            reduce using rule 19 (code_block -> statement .)


state 17

    (22) statement -> basic_block_command . semicolon

    semicolon       shift and go to state 52


state 18

    (23) statement -> block .

    close_curly_brackets reduce using rule 23 (statement -> block .)
    read_line       reduce using rule 23 (statement -> block .)
    exit            reduce using rule 23 (statement -> block .)
    return          reduce using rule 23 (statement -> block .)
    assert          reduce using rule 23 (statement -> block .)
    if_keyword      reduce using rule 23 (statement -> block .)
    while_keyword   reduce using rule 23 (statement -> block .)
    int_32_keyword  reduce using rule 23 (statement -> block .)
    char_keyword    reduce using rule 23 (statement -> block .)
    print           reduce using rule 23 (statement -> block .)
    print_array     reduce using rule 23 (statement -> block .)
    name            reduce using rule 23 (statement -> block .)


state 19

    (24) basic_block_command -> def_var .

    semicolon       reduce using rule 24 (basic_block_command -> def_var .)


state 20

    (25) basic_block_command -> def_array .

    semicolon       reduce using rule 25 (basic_block_command -> def_array .)


state 21

    (26) basic_block_command -> int_assignment .

    semicolon       reduce using rule 26 (basic_block_command -> int_assignment .)


state 22

    (27) basic_block_command -> print_statement .

    semicolon       reduce using rule 27 (basic_block_command -> print_statement .)


state 23

    (28) basic_block_command -> read_line_statement .

    semicolon       reduce using rule 28 (basic_block_command -> read_line_statement .)


state 24

    (29) basic_block_command -> exit_statement .

    semicolon       reduce using rule 29 (basic_block_command -> exit_statement .)


state 25

    (30) basic_block_command -> function_call .

    semicolon       reduce using rule 30 (basic_block_command -> function_call .)


state 26

    (31) basic_block_command -> return_statement .

    semicolon       reduce using rule 31 (basic_block_command -> return_statement .)


state 27

    (32) basic_block_command -> assert_statement .

    semicolon       reduce using rule 32 (basic_block_command -> assert_statement .)


state 28

    (33) block -> if_statement .

    close_curly_brackets reduce using rule 33 (block -> if_statement .)
    read_line       reduce using rule 33 (block -> if_statement .)
    exit            reduce using rule 33 (block -> if_statement .)
    return          reduce using rule 33 (block -> if_statement .)
    assert          reduce using rule 33 (block -> if_statement .)
    if_keyword      reduce using rule 33 (block -> if_statement .)
    while_keyword   reduce using rule 33 (block -> if_statement .)
    int_32_keyword  reduce using rule 33 (block -> if_statement .)
    char_keyword    reduce using rule 33 (block -> if_statement .)
    print           reduce using rule 33 (block -> if_statement .)
    print_array     reduce using rule 33 (block -> if_statement .)
    name            reduce using rule 33 (block -> if_statement .)


state 29

    (34) block -> while_statement .

    close_curly_brackets reduce using rule 34 (block -> while_statement .)
    read_line       reduce using rule 34 (block -> while_statement .)
    exit            reduce using rule 34 (block -> while_statement .)
    return          reduce using rule 34 (block -> while_statement .)
    assert          reduce using rule 34 (block -> while_statement .)
    if_keyword      reduce using rule 34 (block -> while_statement .)
    while_keyword   reduce using rule 34 (block -> while_statement .)
    int_32_keyword  reduce using rule 34 (block -> while_statement .)
    char_keyword    reduce using rule 34 (block -> while_statement .)
    print           reduce using rule 34 (block -> while_statement .)
    print_array     reduce using rule 34 (block -> while_statement .)
    name            reduce using rule 34 (block -> while_statement .)


state 30

    (60) def_var -> data_type . new_var_name
    (61) def_var -> data_type . new_var_name equals_operator value
    (62) def_array -> data_type . new_var_name open_brackets simple_int_value close_brackets
    (92) new_var_name -> . name

    name            shift and go to state 54

    new_var_name                   shift and go to state 53

state 31

    (64) int_assignment -> dest_var . equals_operator value

    equals_operator shift and go to state 55


state 32

    (96) print_statement -> print_value_statement .

    semicolon       reduce using rule 96 (print_statement -> print_value_statement .)


state 33

    (97) print_statement -> print_string_statement .

    semicolon       reduce using rule 97 (print_statement -> print_string_statement .)


state 34

    (98) print_statement -> print_array_statement .

    semicolon       reduce using rule 98 (print_statement -> print_array_statement .)


state 35

    (95) read_line_statement -> read_line . array_name comma simple_int_value
    (90) array_name -> . name

    name            shift and go to state 57

    array_name                     shift and go to state 56

state 36

    (63) array_cell -> array_name . open_brackets value close_brackets

    open_brackets   shift and go to state 58


state 37

    (94) exit_statement -> exit . int_expression
    (72) int_expression -> . simple_int_value
    (73) int_expression -> . function_call_value
    (74) int_expression -> . array_cell
    (75) int_expression -> . int_expression_in_parenthesise
    (76) int_expression -> . var_name
    (77) int_expression -> . add_expression
    (78) int_expression -> . sub_expression
    (79) int_expression -> . mul_expression
    (80) int_expression -> . dev_expression
    (81) int_expression -> . dev_rest_expression
    (65) simple_int_value -> . int_32_value
    (66) simple_int_value -> . char_value
    (71) function_call_value -> . function_call
    (63) array_cell -> . array_name open_brackets value close_brackets
    (83) int_expression_in_parenthesise -> . open_parenthesise int_expression close_parenthesise
    (89) var_name -> . name
    (84) add_expression -> . expression add_operator expression
    (85) sub_expression -> . expression sub_operator expression
    (86) mul_expression -> . expression asterisk expression
    (87) dev_expression -> . expression dev_operator expression
    (88) dev_rest_expression -> . expression dev_rest_operator expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (90) array_name -> . name
    (82) expression -> . int_expression
    (93) function_name -> . name

    int_32_value    shift and go to state 70
    char_value      shift and go to state 71
    open_parenthesise shift and go to state 73
    name            shift and go to state 74

    int_expression                 shift and go to state 59
    simple_int_value               shift and go to state 60
    function_call_value            shift and go to state 61
    array_cell                     shift and go to state 62
    int_expression_in_parenthesise shift and go to state 63
    var_name                       shift and go to state 64
    add_expression                 shift and go to state 65
    sub_expression                 shift and go to state 66
    mul_expression                 shift and go to state 67
    dev_expression                 shift and go to state 68
    dev_rest_expression            shift and go to state 69
    function_call                  shift and go to state 72
    array_name                     shift and go to state 36
    expression                     shift and go to state 75
    function_name                  shift and go to state 38

state 38

    (15) function_call -> function_name . open_parenthesise function_call_parameters close_parenthesise

    open_parenthesise shift and go to state 76


state 39

    (3) return_statement -> return . return_value
    (5) return_value -> . value
    (6) return_value -> .
    (70) value -> . int_value
    (67) int_value -> . int_expression
    (72) int_expression -> . simple_int_value
    (73) int_expression -> . function_call_value
    (74) int_expression -> . array_cell
    (75) int_expression -> . int_expression_in_parenthesise
    (76) int_expression -> . var_name
    (77) int_expression -> . add_expression
    (78) int_expression -> . sub_expression
    (79) int_expression -> . mul_expression
    (80) int_expression -> . dev_expression
    (81) int_expression -> . dev_rest_expression
    (65) simple_int_value -> . int_32_value
    (66) simple_int_value -> . char_value
    (71) function_call_value -> . function_call
    (63) array_cell -> . array_name open_brackets value close_brackets
    (83) int_expression_in_parenthesise -> . open_parenthesise int_expression close_parenthesise
    (89) var_name -> . name
    (84) add_expression -> . expression add_operator expression
    (85) sub_expression -> . expression sub_operator expression
    (86) mul_expression -> . expression asterisk expression
    (87) dev_expression -> . expression dev_operator expression
    (88) dev_rest_expression -> . expression dev_rest_operator expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (90) array_name -> . name
    (82) expression -> . int_expression
    (93) function_name -> . name

    semicolon       reduce using rule 6 (return_value -> .)
    int_32_value    shift and go to state 70
    char_value      shift and go to state 71
    open_parenthesise shift and go to state 73
    name            shift and go to state 74

    return_value                   shift and go to state 77
    value                          shift and go to state 78
    int_value                      shift and go to state 79
    int_expression                 shift and go to state 80
    simple_int_value               shift and go to state 60
    function_call_value            shift and go to state 61
    array_cell                     shift and go to state 62
    int_expression_in_parenthesise shift and go to state 63
    var_name                       shift and go to state 64
    add_expression                 shift and go to state 65
    sub_expression                 shift and go to state 66
    mul_expression                 shift and go to state 67
    dev_expression                 shift and go to state 68
    dev_rest_expression            shift and go to state 69
    function_call                  shift and go to state 72
    array_name                     shift and go to state 36
    expression                     shift and go to state 75
    function_name                  shift and go to state 38

state 40

    (4) assert_statement -> assert . condition
    (38) condition -> . simple_condition
    (39) condition -> . complex_condition
    (40) simple_condition -> . les_condition
    (41) simple_condition -> . grater_condition
    (42) simple_condition -> . equality_condition
    (43) simple_condition -> . not_equals_condition
    (44) simple_condition -> . condition_in_parenthesise
    (45) complex_condition -> . and_condition
    (46) complex_condition -> . or_condition
    (50) les_condition -> . expression less_operator expression
    (51) grater_condition -> . expression greater_operator expression
    (52) equality_condition -> . expression equality_operator expression
    (53) not_equals_condition -> . expression not_equals_operator expression
    (49) condition_in_parenthesise -> . open_parenthesise condition close_parenthesise
    (48) and_condition -> . condition and_operator simple_condition
    (47) or_condition -> . condition or_operator simple_condition
    (82) expression -> . int_expression
    (72) int_expression -> . simple_int_value
    (73) int_expression -> . function_call_value
    (74) int_expression -> . array_cell
    (75) int_expression -> . int_expression_in_parenthesise
    (76) int_expression -> . var_name
    (77) int_expression -> . add_expression
    (78) int_expression -> . sub_expression
    (79) int_expression -> . mul_expression
    (80) int_expression -> . dev_expression
    (81) int_expression -> . dev_rest_expression
    (65) simple_int_value -> . int_32_value
    (66) simple_int_value -> . char_value
    (71) function_call_value -> . function_call
    (63) array_cell -> . array_name open_brackets value close_brackets
    (83) int_expression_in_parenthesise -> . open_parenthesise int_expression close_parenthesise
    (89) var_name -> . name
    (84) add_expression -> . expression add_operator expression
    (85) sub_expression -> . expression sub_operator expression
    (86) mul_expression -> . expression asterisk expression
    (87) dev_expression -> . expression dev_operator expression
    (88) dev_rest_expression -> . expression dev_rest_operator expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (90) array_name -> . name
    (93) function_name -> . name

    open_parenthesise shift and go to state 92
    int_32_value    shift and go to state 70
    char_value      shift and go to state 71
    name            shift and go to state 74

    condition                      shift and go to state 81
    simple_condition               shift and go to state 82
    complex_condition              shift and go to state 83
    les_condition                  shift and go to state 84
    grater_condition               shift and go to state 85
    equality_condition             shift and go to state 86
    not_equals_condition           shift and go to state 87
    condition_in_parenthesise      shift and go to state 88
    and_condition                  shift and go to state 89
    or_condition                   shift and go to state 90
    expression                     shift and go to state 91
    int_expression                 shift and go to state 93
    simple_int_value               shift and go to state 60
    function_call_value            shift and go to state 61
    array_cell                     shift and go to state 62
    int_expression_in_parenthesise shift and go to state 63
    var_name                       shift and go to state 64
    add_expression                 shift and go to state 65
    sub_expression                 shift and go to state 66
    mul_expression                 shift and go to state 67
    dev_expression                 shift and go to state 68
    dev_rest_expression            shift and go to state 69
    function_call                  shift and go to state 72
    array_name                     shift and go to state 36
    function_name                  shift and go to state 38

state 41

    (54) if_statement -> if_keyword . open_parenthesise condition close_parenthesise scope else_statement
    (55) if_statement -> if_keyword . open_parenthesise condition close_parenthesise scope

    open_parenthesise shift and go to state 94


state 42

    (57) while_statement -> while_keyword . open_parenthesise condition close_parenthesise scope

    open_parenthesise shift and go to state 95


state 43

    (68) dest_var -> var_name .

    equals_operator reduce using rule 68 (dest_var -> var_name .)


state 44

    (69) dest_var -> array_cell .

    equals_operator reduce using rule 69 (dest_var -> array_cell .)


state 45

    (100) print_value_statement -> print . value
    (101) print_string_statement -> print . string
    (70) value -> . int_value
    (67) int_value -> . int_expression
    (72) int_expression -> . simple_int_value
    (73) int_expression -> . function_call_value
    (74) int_expression -> . array_cell
    (75) int_expression -> . int_expression_in_parenthesise
    (76) int_expression -> . var_name
    (77) int_expression -> . add_expression
    (78) int_expression -> . sub_expression
    (79) int_expression -> . mul_expression
    (80) int_expression -> . dev_expression
    (81) int_expression -> . dev_rest_expression
    (65) simple_int_value -> . int_32_value
    (66) simple_int_value -> . char_value
    (71) function_call_value -> . function_call
    (63) array_cell -> . array_name open_brackets value close_brackets
    (83) int_expression_in_parenthesise -> . open_parenthesise int_expression close_parenthesise
    (89) var_name -> . name
    (84) add_expression -> . expression add_operator expression
    (85) sub_expression -> . expression sub_operator expression
    (86) mul_expression -> . expression asterisk expression
    (87) dev_expression -> . expression dev_operator expression
    (88) dev_rest_expression -> . expression dev_rest_operator expression
    (15) function_call -> . function_name open_parenthesise function_call_parameters close_parenthesise
    (90) array_name -> . name
    (82) expression -> . int_expression
    (93) function_name -> . name

    string          shift and go to state 97
    int_32_value    shift and go to state 70
    char_value      shift and go to state 71
    open_parenthesise shift and go to state 73
    name            shift and go to state 74
